--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -16,9 +16,9 @@ jobs:
       - name: Create env file
         run: |
           touch .env
-          echo "${{ secrets.VITE_AUTH_CLIENT_ID }} >> .env
+          echo "${{ secrets.VITE_AUTH_CLIENT_ID }}" >> .env
       - name: Sign in to Docker Hub
-        rund: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
       - name: Build Docker Image
         run: docker build -t seoyeon2037/aicc6_task_front .
       - name: Push Docker Image
